# x-ray_scattering_from_aligned_molecules

./: Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml
doc-source/: _config.yml  _toc.yml  intro.md
doc-source/demos/: scattering_rotations_sampling_091224-dev-DIBN-ADMs-170125-15keV.ipynb  scattering_rotations_sampling_091224-dev-DIBN-ADMs-170125-30kev.ipynb  scattering_rotations_sampling_091224-dev-N2-ADMs-170125.ipynb  scattering_rotations_sampling_091224-dev-naphthalene-ADMs-170125-15kev.ipynb  scattering_rotations_sampling_091224-dev-naphthalene-ADMs-170125-30kev.ipynb
doc-source/dev/: scattering_rotations_sampling_091224-dev-NO2-ADMs-170125.ipynb
doc-source/extras/: CONTRIBUTING.md  README.md
doc-source/extras/.github/workflows/: deploy.yml
x_ray_scattering_from_aligned_molecules/: __init__.py  dataset.py  features.py  plots.py
x_ray_scattering_from_aligned_molecules/modeling/: predict.py  train.py
