[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "x_ray_scattering_from_aligned_molecules"
version = "0.0.1"
description = "Code development and examples for X-ray scattering from aligned molecules."
authors = [
  { name = "Paul Hockett" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.10"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.ruff.lint.isort]
known_first_party = ["x_ray_scattering_from_aligned_molecules"]
force_sort_within_sections = true
